# server/docs/swagger.json
@@ -334,7 +334,7 @@
                     }
                 ],
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -345,14 +345,53 @@
                 "summary": "添加商品种类",
                 "parameters": [
                     {
-                        "description": "body",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/entity.AddGoodsType"
-                        }
+                        "type": "string",
+                        "description": "商品名称",
+                        "name": "goods_name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "商品规格 1.盒 2.瓶 3.支",
+                        "name": "goods_specs",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "float",
+                        "description": "商品成本价",
+                        "name": "goods_unitprince",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "float",
+                        "description": "商品销售价",
+                        "name": "goods_prince",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "商品图片",
+                        "name": "goods_image",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "生产批号",
+                        "name": "goods_batch_number",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "生产日期",
+                        "name": "goods_date",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "商品状态 1.下架  2.在售",
+                        "name": "goods_state",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -566,7 +605,7 @@
                     }
                 ],
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -577,14 +616,60 @@
                 "summary": "修改商品种类信息",
                 "parameters": [
                     {
-                        "description": "body",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/entity.UpdateGoodsType"
-                        }
+                        "type": "integer",
+                        "description": "商品ID",
+                        "name": "goods_id",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "商品名称",
+                        "name": "goods_name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "商品规格 1.盒 2.瓶 3.支",
+                        "name": "goods_specs",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "float",
+                        "description": "商品成本价",
+                        "name": "goods_unitprince",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "float",
+                        "description": "商品销售价",
+                        "name": "goods_prince",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "商品图片",
+                        "name": "goods_image",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "生产批号",
+                        "name": "goods_batch_number",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "生产日期",
+                        "name": "goods_date",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "商品状态 1.下架  2.在售",
+                        "name": "goods_state",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -1146,55 +1231,6 @@
                 }
             }
         },
-        "entity.AddGoodsType": {
-            "type": "object",
-            "properties": {
-                "goods_batch_number": {
-                    "description": "生产批号",
-                    "type": "string"
-                },
-                "goods_date": {
-                    "description": "生产日期",
-                    "type": "string"
-                },
-                "goods_image": {
-                    "description": "商品图片",
-                    "type": "string"
-                },
-                "goods_name": {
-                    "description": "商品名称",
-                    "type": "string"
-                },
-                "goods_prince": {
-                    "description": "商品销售价",
-                    "type": "number"
-                },
-                "goods_specs": {
-                    "description": "商品规格 1.盒 2.瓶 3.支",
-                    "type": "string",
-                    "default": "1",
-                    "enum": [
-                        "1",
-                        "2",
-                        "3"
-                    ]
-                },
-                "goods_state": {
-                    "description": "商品状态 1.下架  2.在售",
-                    "type": "string",
-                    "default": "2",
-                    "enum": [
-                        "1",
-                        "2",
-                        "3"
-                    ]
-                },
-                "goods_unitprince": {
-                    "description": "商品成本价",
-                    "type": "number"
-                }
-            }
-        },
         "entity.AddOrder": {
             "type": "object",
             "properties": {
@@ -1310,59 +1346,6 @@
                 "goods_stock_id": {
                     "description": "库存ID",
                     "type": "integer"
-                }
-            }
-        },
-        "entity.UpdateGoodsType": {
-            "type": "object",
-            "properties": {
-                "goods_batch_number": {
-                    "description": "生产批号",
-                    "type": "string"
-                },
-                "goods_date": {
-                    "description": "生产日期",
-                    "type": "string"
-                },
-                "goods_id": {
-                    "description": "商品ID",
-                    "type": "integer"
-                },
-                "goods_image": {
-                    "description": "商品图片",
-                    "type": "string"
-                },
-                "goods_name": {
-                    "description": "商品名称",
-                    "type": "string"
-                },
-                "goods_prince": {
-                    "description": "商品销售价",
-                    "type": "number"
-                },
-                "goods_specs": {
-                    "description": "商品规格 1.盒 2.瓶 3.支",
-                    "type": "string",
-                    "default": "1",
-                    "enum": [
-                        "1",
-                        "2",
-                        "3"
-                    ]
-                },
-                "goods_state": {
-                    "description": "商品状态 1.下架  2.在售",
-                    "type": "string",
-                    "default": "2",
-                    "enum": [
-                        "1",
-                        "2",
-                        "3"
-                    ]
-                },
-                "goods_unitprince": {
-                    "description": "商品成本价",
-                    "type": "number"
                 }
             }
         },
